--- a/ansible/roles/backend/tasks/create_db_schema.yaml
+++ b/ansible/roles/backend/tasks/create_db_schema.yaml
@@ -6,3 +6,6 @@
         mode: '0755'
   notify: 
     - execute db script
+
+- name: Populate database
+  command: node /{{ backend_src_dir }}/seeds.js
