--- a/ansible/roles/backend/tasks/main.yaml
+++ b/ansible/roles/backend/tasks/main.yaml
@@ -1,6 +1,9 @@
 ---
-- name: install_dependencies on backend
+- name: install dependencies on backend hosts
   include_tasks: roles/backend/tasks/install_dependencies.yaml
 
 - name: create database schema
   include_tasks: roles/backend/tasks/create_db_script.yaml
+
+- name: start backend server
+  command: {{ backend_start_command }}
