Ansible playbooks WIP

--- a/ansible/group_vars/backend_nodes.yaml
+++ b/ansible/group_vars/backend_nodes.yaml
@@ -5,6 +5,6 @@ db_user: applicationuser
 db_pass: applicationuser
 db_name: movie_db
 
-backend_src_dir: ~/devops-rampup/movie-analyst-api
+backend_src_dir: /home/ubuntu/devops-rampup/movie-analyst-api
 
 backend_start_command: "node {{ backend_src_dir }}/server.js"
