--- a/ansible/group_vars/frontend_nodes.yaml
+++ b/ansible/group_vars/frontend_nodes.yaml
@@ -1,3 +1,3 @@
-frontend_src_dir: ~/devops-rampup/movie-analyst-ui
+frontend_src_dir: /home/ubuntu/devops-rampup/movie-analyst-ui
 
 frontend_start_command: "node {{ frontend_src_dir }}/server.js"
