--- a/ansible/roles/backend/tasks/create_db_schema.yaml
+++ b/ansible/roles/backend/tasks/create_db_schema.yaml
@@ -2,10 +2,10 @@
 - name: Create the necessary database schema
   template:
         src: db_script.sh.j2
-        dest: /{{ backend_src_dir }}/db_script.sh
+        dest: "/{{ backend_src_dir }}/db_script.sh"
         mode: '0755'
   notify: 
     - execute db script
 
 - name: Populate database
-  command: node /{{ backend_src_dir }}/seeds.js
+  command: "node /{{ backend_src_dir }}/seeds.js"
