--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = ./inventory
 remote_user = ubuntu
-private_key_file = ~/ansible/ansible.pem
+private_key_file = ~/epam-practical-task/ansible/ansible.pem
 host_key_checking = False
