--- a/ansible/group_vars/backend.yaml
+++ b/ansible/group_vars/backend.yaml
@@ -1,10 +1,11 @@
 backend_port: 3000
 
 db_host: 
+db_port: 3306
 db_user: applicationuser
 db_pass: applicationuser
 db_name: movie_db
 
 backend_src_dir: /home/ubuntu/devops-rampup/movie-analyst-api
 
-backend_start_command: "node {{ backend_src_dir }}/server.js"
+backend_start_command: nohup node {{ backend_src_dir }}/server.js > /dev/null 2>&1 &
